Menu work me tinkers

--- a/app/src/main/res/layout/receipt.xml
+++ b/app/src/main/res/layout/receipt.xml
@@ -8,5 +8,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Receipt"
         android:id="@+id/textView2"
-        android:layout_gravity="center" />
+        android:layout_gravity="center_horizontal|top"
+        android:textSize="40dp"
+        android:gravity="center"
+        android:textStyle="bold" />
 </FrameLayout>
