--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Home"
         android:id="@+id/textView2"
         android:layout_gravity="center_horizontal|top"
-        android:textSize="40dp" />
+        android:textSize="40dp"
+        android:gravity="center"
+        android:textStyle="bold" />
 
 </FrameLayout>
