--- a/app/src/main/res/layout/transactions.xml
+++ b/app/src/main/res/layout/transactions.xml
@@ -8,7 +8,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Transactions"
         android:id="@+id/textView2"
-        android:layout_gravity="center" />
+        android:layout_gravity="center_horizontal|top"
+        android:textSize="40dp"
+        android:gravity="center"
+        android:textStyle="bold" />
 
 
 </FrameLayout>
