--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -11,6 +11,8 @@
         android:layout_gravity="center_horizontal|top"
         android:textSize="40dp"
         android:gravity="center"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="#c9201b1b"
+        android:textColor="#ffffff" />
 
 </FrameLayout>
