--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="#02B0FA"
-        android:centerColor="#58D6FC"
-        android:endColor="#2E7D32"
+        android:startColor="#58D6FC"
+        android:centerColor="#02B0FA"
+        android:endColor="#009DE0"
         android:type="linear"
         android:angle="135"/>
 </shape>
