--- a/app/src/main/res/layout/content_debt_overview.xml
+++ b/app/src/main/res/layout/content_debt_overview.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#000000"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_debt_overview" tools:context=".DebtOverview">
 
