--- a/app/src/main/res/layout/owes.xml
+++ b/app/src/main/res/layout/owes.xml
@@ -3,13 +3,16 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Owes"
         android:id="@+id/textView2"
         android:layout_gravity="center_horizontal|top"
         android:textSize="40dp"
         android:gravity="center"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="#ffffff"
+        android:background="#c9201b1b" />
+
 </FrameLayout>
