--- a/app/src/main/res/layout/receipt.xml
+++ b/app/src/main/res/layout/receipt.xml
@@ -18,11 +18,11 @@
         android:background="#c9201b1b" />
 
     <Button
-        android:id="@+id/angry_btn"
+        android:id="@+id/button"
         android:text="Take Picture"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/buttonshape"
         android:shadowColor="#A8A8A8"
@@ -30,20 +30,39 @@
         android:shadowDy="0"
         android:shadowRadius="5"
         android:clickable="true"
-        android:layout_gravity="center"
-        android:elegantTextHeight="false" />
+        android:elegantTextHeight="false"
+        android:layout_column="17"
+        android:layout_gravity="center_horizontal|bottom" />
 
     <ImageView
-        android:layout_width="350dp"
-        android:layout_height="300dp"
+        android:layout_width="393dp"
+        android:layout_height="337dp"
         android:id="@+id/image_view"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
         />
 
-    <TableLayout
+    <!--<TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left|center_vertical"></TableLayout>
+        android:layout_height="match_parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </TableRow>
+    </TableLayout>-->
 
 </FrameLayout>
