--- a/app/src/main/res/layout/activity_debt_overview.xml
+++ b/app/src/main/res/layout/activity_debt_overview.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content" android:layout_height="match_parent"
         android:layout_gravity="start" android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_debt_overview"
-        app:menu="@menu/activity_debt_overview_drawer" />
+        app:menu="@menu/activity_debt_overview_drawer"
+        android:touchscreenBlocksFocus="true" />
 
 </android.support.v4.widget.DrawerLayout>
