--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -15,4 +15,13 @@
         android:background="#c9201b1b"
         android:textColor="#ffffff" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="84dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/textViewName"
+        android:layout_gravity="center"
+        android:textSize="50dp" />
+
 </FrameLayout>
