--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -22,6 +22,8 @@
         android:text="Large Text"
         android:id="@+id/textViewName"
         android:layout_gravity="center"
-        android:textSize="50dp" />
+        android:textSize="50dp"
+        android:textColor="#ffffff"
+        />
 
 </FrameLayout>
